--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>INFINITY | The Journey</title>
+    <title>Hot Night 🔥</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -122,7 +122,7 @@
 
     <div id="login" class="screen active" style="justify-content: center;">
         <div class="login-box">
-            <div class="logo">INFINITY</div>
+            <div class="logo">Hot Night 🔥</div>
             <p style="color:#888; margin-bottom: 30px; font-size: 0.9rem;">
                 الرحلة تبدأ من هنا..<br>
                 <span style="color:var(--primary);">(للمتزوجين فقط +18)</span>
@@ -418,4 +418,5 @@
     </script>
 </body>
 </html>
+
 
