--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             display: none; width: 100%; height: 100%;
             position: relative; z-index: 2;
             flex-direction: column; align-items: center;
-            padding: 20px; overflow-y: auto;
+            padding: 15px; overflow-y: auto; /* سكرول للقوائم الطويلة فقط */
             opacity: 0; transition: opacity 0.3s ease-in;
         }
         .screen.active { display: flex; opacity: 1; }
@@ -37,21 +37,21 @@
         .login-box {
             background: rgba(20, 20, 20, 0.9); backdrop-filter: blur(10px);
             border: 1px solid rgba(212, 175, 55, 0.3);
-            padding: 40px 20px; border-radius: 30px;
-            text-align: center; width: 100%; max-width: 400px;
-            box-shadow: 0 0 50px rgba(0,0,0,0.8); margin: auto;
+            padding: 30px 20px; border-radius: 25px;
+            text-align: center; width: 100%; max-width: 350px;
+            box-shadow: 0 0 40px rgba(0,0,0,0.8); margin: auto;
         }
-        .logo { font-size: 2.5rem; font-weight: 900; color: var(--primary); letter-spacing: 2px; margin-bottom: 5px; }
+        .logo { font-size: 2.2rem; font-weight: 900; color: var(--primary); letter-spacing: 2px; margin-bottom: 5px; }
         .input-vip {
             background: rgba(255,255,255,0.05); border: 1px solid #333;
-            padding: 15px; border-radius: 50px; color: var(--primary);
-            width: 100%; text-align: center; font-size: 1.3rem; letter-spacing: 5px; margin-bottom: 20px;
+            padding: 12px; border-radius: 50px; color: var(--primary);
+            width: 100%; text-align: center; font-size: 1.2rem; letter-spacing: 5px; margin-bottom: 20px;
         }
         .btn-gold {
             background: linear-gradient(90deg, #b8860b, #ffd700, #b8860b);
             background-size: 200%; color: black; font-weight: bold;
-            padding: 15px; width: 100%; border-radius: 50px; border: none;
-            font-size: 1.1rem; cursor: pointer; animation: shine 4s infinite linear;
+            padding: 12px; width: 100%; border-radius: 50px; border: none;
+            font-size: 1rem; cursor: pointer; animation: shine 4s infinite linear;
             box-shadow: 0 4px 15px rgba(212, 175, 55, 0.4);
         }
         @keyframes shine { to { background-position: 200% center; } }
@@ -60,34 +60,34 @@
         .dashboard-header {
             width: 100%; max-width: 500px;
             display: flex; justify-content: space-between; align-items: center;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
         .guide-btn {
             background: rgba(255,255,255,0.1); border: 1px solid var(--primary);
-            color: var(--primary); padding: 8px 15px; border-radius: 20px;
-            font-size: 0.85rem; cursor: pointer; display: flex; align-items: center; gap: 5px;
+            color: var(--primary); padding: 6px 12px; border-radius: 20px;
+            font-size: 0.8rem; cursor: pointer; display: flex; align-items: center; gap: 5px;
             transition: 0.3s;
         }
         .guide-btn:active { background: var(--primary); color: black; }
 
         .games-grid {
-            display: grid; grid-template-columns: 1fr; gap: 12px;
-            width: 100%; max-width: 500px; padding-bottom: 60px;
+            display: grid; grid-template-columns: 1fr; gap: 10px;
+            width: 100%; max-width: 500px; padding-bottom: 50px;
         }
         .game-item {
-            position: relative; height: 110px; border-radius: 18px;
+            position: relative; height: 100px; border-radius: 15px;
             overflow: hidden; cursor: pointer; border: 1px solid #333;
         }
         .game-item img { width: 100%; height: 100%; object-fit: cover; opacity: 0.5; transition: 0.5s; }
         .game-item:active img { opacity: 0.3; transform: scale(1.05); }
         .game-label {
-            position: absolute; bottom: 0; left: 0; width: 100%; padding: 10px 15px;
+            position: absolute; bottom: 0; left: 0; width: 100%; padding: 8px 12px;
             background: linear-gradient(to top, black, transparent); text-align: right;
         }
-        .g-title { font-size: 1.2rem; font-weight: 800; color: white; }
-        .g-sub { font-size: 0.75rem; color: var(--primary); font-weight: bold; }
+        .g-title { font-size: 1.1rem; font-weight: 800; color: white; }
+        .g-sub { font-size: 0.7rem; color: var(--primary); font-weight: bold; }
 
-        /* --- نافذة الدليل (محدثة) --- */
+        /* --- نافذة الدليل --- */
         .modal-glass {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.9); z-index: 100;
@@ -97,21 +97,22 @@
         .modal-glass.show { display: flex; animation: fadeIn 0.3s; }
         .guide-content {
             background: #151515; border: 1px solid var(--primary);
-            border-radius: 20px; width: 100%; max-width: 450px;
-            padding: 25px; text-align: right; max-height: 85vh; overflow-y: auto;
+            border-radius: 20px; width: 100%; max-width: 400px;
+            padding: 20px; text-align: right; max-height: 85vh; overflow-y: auto;
         }
         .step-box {
             background: rgba(255,255,255,0.05); border-right: 3px solid var(--primary);
-            padding: 12px; margin-bottom: 12px; border-radius: 8px;
+            padding: 10px; margin-bottom: 10px; border-radius: 8px;
         }
-        .step-head { color: var(--primary); font-weight: bold; font-size: 1rem; display: flex; justify-content: space-between; margin-bottom: 8px;}
-        .step-count { background: var(--primary); color: black; font-size: 0.7rem; padding: 3px 8px; border-radius: 8px; height: fit-content; font-weight: bold; }
-        .step-desc { color: #ccc; font-size: 0.85rem; line-height: 1.5; }
-        .guide-intro { color: #aaa; text-align: center; font-size: 0.9rem; margin-bottom: 20px; line-height: 1.6; }
+        .step-head { color: var(--primary); font-weight: bold; font-size: 0.95rem; display: flex; justify-content: space-between; margin-bottom: 5px;}
+        .step-count { background: var(--primary); color: black; font-size: 0.7rem; padding: 2px 6px; border-radius: 8px; height: fit-content; font-weight: bold; }
+        .step-desc { color: #ccc; font-size: 0.8rem; line-height: 1.4; }
+        .guide-intro { color: #aaa; text-align: center; font-size: 0.85rem; margin-bottom: 15px; line-height: 1.5; }
 
-        /* --- الكروت --- */
+        /* --- الكروت (تم التعديل: تصغير الحجم) --- */
         .card-stage {
-            perspective: 1000px; width: 100%; max-width: 400px; height: 420px;
+            /* الحجم الجديد المناسب للموبايل */
+            perspective: 1000px; width: 100%; max-width: 320px; height: 340px;
             margin: auto; display: flex; align-items: center; justify-content: center;
         }
         .flipper {
@@ -120,23 +121,25 @@
         }
         .front, .back {
             position: absolute; width: 100%; height: 100%;
-            backface-visibility: hidden; border-radius: 25px;
+            backface-visibility: hidden; border-radius: 20px;
             display: flex; flex-direction: column; justify-content: center; align-items: center;
-            padding: 20px; text-align: center;
-            box-shadow: 0 20px 50px rgba(0,0,0,0.6); border: 2px solid var(--primary);
+            padding: 15px; text-align: center;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.6); border: 2px solid var(--primary);
         }
         .front { background: #111 url('https://www.transparenttextures.com/patterns/carbon-fibre.png'); }
         .back { background: #151515; transform: rotateY(180deg); }
         .flipped { transform: rotateY(180deg); }
-        .text-content { font-size: 1.4rem; font-weight: bold; line-height: 1.5; color: #fff; }
+        
+        /* تصغير الخط قليلاً ليتناسب مع الكارت الجديد */
+        .text-content { font-size: 1.25rem; font-weight: bold; line-height: 1.4; color: #fff; }
 
         /* --- مسرح الأحلام (Roleplay) --- */
         .rp-box {
             background: #111; border: 1px solid var(--accent); border-radius: 20px;
-            padding: 20px; width: 100%; max-width: 400px; margin: auto; text-align: right;
+            padding: 20px; width: 100%; max-width: 350px; margin: auto; text-align: right;
         }
-        .rp-label { color: var(--accent); font-size: 0.9rem; margin-bottom: 5px; font-weight: bold; }
-        .rp-val { color: white; font-size: 1.1rem; margin-bottom: 15px; border-bottom: 1px solid #333; padding-bottom: 10px; }
+        .rp-label { color: var(--accent); font-size: 0.85rem; margin-bottom: 5px; font-weight: bold; }
+        .rp-val { color: white; font-size: 1rem; margin-bottom: 12px; border-bottom: 1px solid #333; padding-bottom: 8px; }
 
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
@@ -269,7 +272,8 @@
     </div>
 
     <div id="gameplay" class="screen">
-        <h2 id="g-header" style="color:var(--primary); margin-bottom: 20px;"></h2>
+        <h2 id="g-header" style="color:var(--primary); margin-bottom: 10px;"></h2>
+        
         <div class="card-stage">
             <div class="flipper" id="card-obj">
                 <div class="front">
@@ -281,8 +285,9 @@
                 </div>
             </div>
         </div>
-        <button class="btn-gold" style="width:200px; margin-top:40px;" onclick="flip()">اسحب كارت</button>
-        <button style="background:none; border:none; color:#888; margin-top:20px;" onclick="goHome()">إنهاء</button>
+
+        <button class="btn-gold" style="width:200px; margin-top:20px;" onclick="flip()">اسحب كارت</button>
+        <button style="background:none; border:none; color:#888; margin-top:10px;" onclick="goHome()">إنهاء</button>
     </div>
 
     <div id="scratch-area" class="screen" style="justify-content: center;">
@@ -291,8 +296,8 @@
             <div id="prize-txt" style="position:absolute; width:100%; height:100%; display:flex; justify-content:center; align-items:center; background:white; color:black; font-size:1.4rem; font-weight:bold; padding: 10px; text-align: center;"></div>
             <canvas id="cvs" style="position:absolute; top:0; left:0;"></canvas>
         </div>
-        <button class="btn-gold" style="width:200px; margin-top:40px;" onclick="resetScratch()">جايزة تانية</button>
-        <button style="background:none; border:none; color:#888; margin-top:20px;" onclick="goHome()">رجوع</button>
+        <button class="btn-gold" style="width:200px; margin-top:20px;" onclick="resetScratch()">جايزة تانية</button>
+        <button style="background:none; border:none; color:#888; margin-top:10px;" onclick="goHome()">رجوع</button>
     </div>
 
     <div id="roleplay-area" class="screen">
@@ -310,8 +315,8 @@
             <div id="rp-plot" class="rp-val" style="border:none; font-size:1rem; line-height:1.5;"></div>
         </div>
 
-        <button class="btn-gold" style="width:200px; margin-top:30px; background: linear-gradient(90deg, #e50914, #ff5050);" onclick="genRoleplay()">سيناريو جديد 🎬</button>
-        <button style="background:none; border:none; color:#888; margin-top:20px;" onclick="goHome()">رجوع</button>
+        <button class="btn-gold" style="width:200px; margin-top:20px; background: linear-gradient(90deg, #e50914, #ff5050);" onclick="genRoleplay()">سيناريو جديد 🎬</button>
+        <button style="background:none; border:none; color:#888; margin-top:10px;" onclick="goHome()">رجوع</button>
     </div>
 
     <script>
@@ -409,7 +414,7 @@
         let currentQ = [];
         let activeStage = "";
 
-        // دالة التنقل (Fix: Black Screen Bug)
+        // دالة التنقل
         function show(id) {
             document.querySelectorAll('.screen').forEach(s => { 
                 if(s.id !== id) {
