--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <div style="font-size:0.7rem; color:#aaa;">الدور على</div>
                 <div id="catch-player" style="font-weight:bold; color:var(--primary);">الزوج 👨</div>
             </div>
-            <button class="dice-btn" id="dice" onclick="rollDice()">🎲</button>
+            <button class="dice-btn" id="catch-dice" onclick="rollCatchDice()">🎲</button>
             <div style="text-align:center;">
                 <div style="font-size:0.7rem; color:#aaa;">المكان</div>
                 <div id="catch-pos" style="font-weight:bold;">Start</div>
@@ -353,9 +353,45 @@
         };
 
         const catchDB = [
-            { type: "start", text: "البداية", icon: "🏁" },
-            { type: "blue", text: "بوسة", desc: "بوسة رقيقة", icon: "💋" },
-            { type: "finish", text: "النهاية", desc: "علاقة كاملة 🔥", icon: "🎉" }
+            { type: "start", text: "البداية", icon: "🏁", desc: "نقطة الانطلاق" }, // 0
+            
+            // المنطقة الزرقاء (1-10)
+            { type: "blue", text: "بوسة", desc: "بوسة رقيقة على الشفايف", icon: "💋" }, // 1
+            { type: "blue", text: "همسة", desc: "همس في الودن بكلمة بحبك", icon: "👂" }, // 2
+            { type: "blue", text: "حضن", desc: "حضن قوي لمدة دقيقة", icon: "🫂" }, // 3
+            { type: "blue", text: "مساج", desc: "مساج للرقبة لمدة دقيقتين", icon: "💆" }, // 4
+            { type: "blue", text: "نظرة", desc: "تواصل بالعيون لمدة 30 ثانية", icon: "👀" }, // 5
+            { type: "blue", text: "خلع", desc: "اخلع قطعة واحدة من ملابسك", icon: "👕" }, // 6
+            { type: "blue", text: "رقص", desc: "رقصة سلو بدون موسيقى", icon: "💃" }, // 7
+            { type: "blue", text: "كشف", desc: "اكشفي جزء من جسمك (اختياري)", icon: "🫣" }, // 8
+            { type: "blue", text: "لمس", desc: "مشي ايدك على جسم الشريك", icon: "🖐️" }, // 9
+            { type: "blue", text: "استراحة", desc: "بوسة على الجبين", icon: "😌" }, // 10
+
+            // المنطقة البنفسجية (11-20)
+            { type: "purple", text: "غمغم", desc: "اربط عين شريكك وبوسه", icon: "🕶️" }, // 11
+            { type: "purple", text: "ثلج", desc: "مشي تلجة على جسم شريكك", icon: "🧊" }, // 12
+            { type: "purple", text: "ريشة", desc: "استخدم اطراف صوابعك للمداعبة", icon: "🪶" }, // 13
+            { type: "purple", text: "69", desc: "وضع 69 لمدة دقيقة", icon: "♋" }, // 14
+            { type: "purple", text: "عض", desc: "عضة خفيفة (Love Bite)", icon: "🧛" }, // 15
+            { type: "purple", text: "سيطرة", desc: "الطرف التاني يؤمرك لمدة 5 دقايق", icon: "👑" }, // 16
+            { type: "purple", text: "لعق", desc: "استخدم لسانك في مكان حساس", icon: "👅" }, // 17
+            { type: "purple", text: "تحت الغطا", desc: "مداعبة تحت البطانية", icon: "🛌" }, // 18
+            { type: "purple", text: "صورة", desc: "خدوا صورة سيلفي مثيرة للذكرى", icon: "📸" }, // 19
+            { type: "purple", text: "فانتزي", desc: "احكوا خيال جنسي نفسكوا فيه", icon: "💭" }, // 20
+
+            // المنطقة الحمراء (21-29)
+            { type: "red", text: "2 Minutes", desc: "وضع الدوجي لمدة دقيقتين", icon: "🐕" }, // 21
+            { type: "red", text: "Oral", desc: "جنس فموي للطرف الآخر", icon: "🍭" }, // 22
+            { type: "red", text: "وضع X", desc: "جربوا وضع جديد (الكرسي)", icon: "🪑" }, // 23
+            { type: "red", text: "تعري", desc: "تعري كامل (Striptease)", icon: "👙" }, // 24
+            { type: "red", text: "نشوة", desc: "وصل شريكك للنشوة بيدك", icon: "👋" }, // 25
+            { type: "red", text: "على الواقف", desc: "علاقة سريعة وقوفاً", icon: "🧍" }, // 26
+            { type: "red", text: "مرايا", desc: "علاقة أمام المرايا", icon: "🪞" }, // 27
+            { type: "red", text: "قيود", desc: "ربط اليدين (Bondage Light)", icon: "🔗" }, // 28
+            { type: "red", text: "حرية", desc: "افعل ما يحلو لك بشريكك", icon: "😈" }, // 29
+            
+            // النهاية (30)
+            { type: "finish", text: "النهاية", desc: "مبروك! علاقة كاملة الليلة 🔥", icon: "🎉" } // 30
         ];
 
         // --- بيانات عجلة الحظ (16 مثلث، أيقونات فقط) ---
@@ -650,3 +686,4 @@
     </script>
 </body>
 </html>
+
