--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
         <div class="games-grid">
             <div class="game-item" onclick="startGame('stage1')">
                 <img src="https://images.unsplash.com/photo-1516575334481-f85287c2c81d?q=80&w=400&fit=crop" alt="Fun">
-                <div class="game-label"><div class="g-title">1. فك الشفرة</div><div class="g-sub">ضحك وذكريات</div></div>
+                <div class="game-label"><div class="g-title">1. فك الشفرة 😂</div><div class="g-sub">لعبة ضحك وذكريات وكسر الجليد.</div></div>
             </div>
             <div class="game-item" onclick="startGame('stage2')">
                 <img src="https://images.unsplash.com/photo-1621780030440-71c9ace77e05?q=80&w=400&fit=crop" alt="Love">
-                <div class="game-label"><div class="g-title">2. كلمة سر</div><div class="g-sub">رومانسية ومشاعر</div></div>
+                <div class="game-label"><div class="g-title">2. كلمة سر ❤️</div><div class="g-sub">رومانسية ومشاعر</div></div>
             </div>
             <div class="game-item" onclick="startEliminationGame()" style="border-color: #ff9800;">
                 <img src="https://images.unsplash.com/photo-1556911220-e15b29be8c8f?q=80&w=400&fit=crop" alt="Places">
@@ -353,27 +353,27 @@
             </div>
             <div class="game-item" onclick="startGame('stage3')">
                 <img src="https://images.unsplash.com/photo-1596131398989-6256eb88c0b7?q=80&w=400&fit=crop" alt="Touch">
-                <div class="game-label"><div class="g-title">3. لمسة وهمسة</div><div class="g-sub">إثارة حسية</div></div>
+                <div class="game-label"><div class="g-title">4. لمسة وهمسة 🔥</div><div class="g-sub">إثارة حسية ومداعبة وتسخين.</div></div>
             </div>
             <div class="game-item" onclick="startGame('stage4')" style="border-color: var(--accent);">
                 <img src="https://images.unsplash.com/photo-1496345962527-29757c3a3d94?q=80&w=400&fit=crop" alt="Hot">
-                <div class="game-label"><div class="g-title" style="color:var(--accent)">4. نار ودمار</div><div class="g-sub">تحديات جريئة</div></div>
+                <div class="game-label"><div class="g-title" style="color:var(--accent)">5. نار ودمار 🔞</div><div class="g-sub">أكشن وتحديات جريئة.</div></div>
             </div>
             <div class="game-item" onclick="initScratch()">
                 <img src="https://images.unsplash.com/photo-1540555700478-4be289fbecef?q=80&w=400&fit=crop" alt="Gift">
-                <div class="game-label"><div class="g-title">5. خربش واكسب</div><div class="g-sub">جوائز الدلع</div></div>
+                <div class="game-label"><div class="g-title">6. خربش واكسب 🎁</div><div class="g-sub">مكافآت وجوائز الدلع.</div></div>
             </div>
             <div class="game-item" onclick="startRoleplay()">
                 <img src="https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?q=80&w=400&fit=crop" alt="Roleplay">
-                <div class="game-label"><div class="g-title">6. تمثيل ساخن</div><div class="g-sub">سيناريوهات</div></div>
+                <div class="game-label"><div class="g-title">7. تمثيل ساخن 🎭</div><div class="g-sub">سيناريوهات لتقمص الأدوار.</div></div>
             </div>
             <div class="game-item" onclick="startCatchMe()" style="border-color: var(--blue);">
                 <img src="https://images.unsplash.com/photo-1605218427306-6354db696faa?q=80&w=400&fit=crop" alt="Catch Me">
-                <div class="game-label"><div class="g-title" style="color:var(--blue)">7. رحلة المتعة 🎲</div><div class="g-sub">السلم والثعبان</div></div>
+                <div class="game-label"><div class="g-title" style="color:var(--blue)">8. رحلة المتعة 🎲</div><div class="g-sub">لعبة السلم والتعبان الزوجية.</div></div>
             </div>
             <div class="game-item" onclick="startSpinGame()" style="border-color: var(--green);">
                 <img src="https://images.unsplash.com/photo-1599587425330-974c65324426?q=80&w=400&fit=crop" alt="Spin">
-                <div class="game-label"><div class="g-title" style="color:var(--green)">8. عجلة الحظ 🎡</div><div class="g-sub">لف ونفذ</div></div>
+                <div class="game-label"><div class="g-title" style="color:var(--green)">9. عجلة الحظ 🎡</div><div class="g-sub">لف العجلة ونفذ الوضع أو الفعل اللي يطلعلك.</div></div>
             </div>
         </div>
     </div>
@@ -1027,6 +1027,7 @@ function createCatchBoard() {
     </script>
 </body>
 </html>
+
 
 
 
