--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 <input type="password" id="pass" class="input-pro" placeholder="أدخل كود التفعيل" autocomplete="off">
             </div>
 
-            <button class="btn-pro" onclick="login()">ابدأ السهرة 🚀</button>
+            <button id="loginBtn" class="btn-pro" type="button" onclick="secureLogin()">ابدأ السهرة 🚀</button>
             
             <div id="error" class="error-msg">⚠️ الكود غير صحيح، حاول مرة أخرى</div>
             
@@ -2700,4 +2700,5 @@ async function secureLogin() {
     </script>
 </body>
 </html>
+
 
