--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div class="step-box"><div class="step-head"><span>6. تمثيل ساخن 🎭</span></div><div class="step-desc">سيناريوهات لتقمص الأدوار.</div></div>
             <div class="step-box"><div class="step-head"><span style="color:var(--blue)">7. رحلة المتعة 🎲</span></div><div class="step-desc">لعبة السلم والثعبان الزوجية.</div></div>
             <div class="step-box"><div class="step-head"><span style="color:var(--green)">8. عجلة الأوضاع 🎡</span></div><div class="step-desc">لف العجلة ونفذ الوضع أو الفعل اللي يطلعلك.</div></div>
-            <div class="step-box"><div class="step-head"><span>9. دلع وولع 🎁</span></div><div class="step-desc">جايزة "التحلية" في الختام.</div></div>
+            <div class="step-box"><div class="step-head"><span>9. خربش هديتك 🎁</span></div><div class="step-desc">جايزة "التحلية" في الختام.</div></div>
             <button class="btn-gold" onclick="closeGuide()">فهمت.. يلا بينا 🚀</button>
         </div>
     </div>
@@ -439,7 +439,7 @@
             </div>
             <div class="game-item full-width" onclick="openInstructions('game9')">
                 <img src="images/cover9.webp" onerror="this.src='images/cover9.jpeg'" alt="Gift" loading="eager">
-                <div class="game-label"><div class="g-title">9. دلع وولع 🎁</div><div class="g-sub">جائزة الختام</div></div>
+                <div class="game-label"><div class="g-title">9. خربش هديتك 🎁</div><div class="g-sub">جائزة الختام</div></div>
             </div>
         </div>
     </div>
@@ -681,7 +681,7 @@
                 action: () => startSpinGame() 
             },
             game9: { 
-                title: "9. دلع وولع 🎁", 
+                title: "9. خربش هديتك 🎁", 
                 content: `
                     <div class="instr-point"><span class="instr-icon">🎯</span><div><strong>الهدف:</strong> مكافأة ما بعد العلاقة (Aftercare) وتدليل الشريك.</div></div>
                     <div class="instr-point"><span class="instr-icon">🎲</span><div><strong>الطريقة:</strong> كارت خربشة (Scratch Card) مخفي تحته جايزة.</div></div>
@@ -2700,6 +2700,7 @@ function eliminatePlace(id) {
     </script>
 </body>
 </html>
+
 
 
 
